<resources>
       <string name="app_name" translatable="false">Ara Multi Player</string>
    <string name="msg_confirm_rename_file_by_backup_and_delete_and_restore_method">Android doesn\'t allow this app rename a file. So you this app will backup file and delete the file first then restore it with renamed file.\nDo you want to proceed?</string>
    <string name="msg_confirm_refresh_pull_to_refresh">Do you want to refresh the video list?</string>
    <string name="msg_confirm_refresh_pull_to_refresh_music">Do you want to refresh the music list?</string>
    <string name="msg_confirm_cancel_sleeping">Do you want to cancel sleeping?</string>
    <string name="msg_cancel_sleeping">Cancelled sleeping.</string>
    <string name="msg_will_sleep_in_future">Will sleep in %1$s minutes.</string>
    <string name="msg_will_sleep_on_time">Will sleep on time.</string>
    <string name="msg_will_sleep_in_future_title">Will sleep in ~ minutes.</string>
    <string name="msg_cancel_now">It\'s going to sleep now.</string>
    <string name="subtitle_files">Subtitle files</string>
    <string name="select_subtitle">Select a subtitle file</string>
    <string name="download_subtitle">Download a subtitle file</string>
    <string name="detach_subtitle">Detach current subtitle file</string>
    <string name="show_subtitle_files">Show subtitle files</string>
    <string name="hide_subtitle_files">Hide subtitle files</string>
    <string name="format_video">%1$d Video(s)</string>
    <string name="msg_no_subtitle">Can\'t find a subtitle!</string>
    <string name="tv_no_subtitle" translatable="false">Can\'t find a subtitle! Click the search button to find subtitles.</string>
    <string name="tv_select_subtitle_to_display" translatable="false">Click the subtitle you want to display here.\n\nTo download it click the top right button after displaying it.</string>
    <string name="search_other_subtitles">Search other subtitles</string>
    <string name="search_subtitles">Search subtitles</string>
    <string name="msg_write_video_title">Please write the video\'s title to find subtitles</string>
    <string name="format_subtitle">%1$d Subtitle(s)</string>
    <string name="show_subtitle_file_list">Show subtitle file list</string>
    <string name="msg_download_not_supported">Download is not supported.</string>
    <string name="video_file_name">Video file name</string>
    <string name="video_file_name_description">File name with middle truncate with full path</string>
    <string name="subtitle_file_name">Subtitle file name</string>
    <string name="subtitle_file_name_description">Click here to select/download a subtitle</string>
    <string name="edit_subtitles">Edit Subtitles</string>
    <string name="subtitle_study_language">Subtitle (Study Language)</string>
    <string name="subtitle_mother_tongue">Subtitle (Mother Tongue)</string>
    <string name="first_subtitle_file">First subtitle file</string>
    <string name="second_subtitle_file">Second subtitle file</string>
    <string name="use_second_subtitle_file">Use second subtitle file</string>
    <string name="second_subtitle_file_desc">First subtitle must have Study language\'s subtitle\nSecond subtitle must have translation(Mother tongue) subtitle</string>
    <string name="format_edit_subtitles">%1$d / %2$d subtitles</string>
    <string name="edit_this_subtitle">Edit this subtitle</string>
    <string name="translate_this_subtitle">Translate this subtitle</string>
    <string name="translate_subtitle">Translate subtitle</string>
    <string name="translate_warning_msg">It is machine translation so the quality is not good. And it translates only the dialogs that have no translation.</string>
    <string name="recommend_codec">[The recommended codecs are H.264(Video), AAC(Audio) with mp4 file.]</string>
    <string name="video_information_msg_you_know_words">You know %1$s words out of %2$s words in this video (%3$s)</string>
    <string name="release_date">Release Date</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="cast">Cast</string>
    <string name="guest_stars">Guest Stars</string>
    <string name="genre">Genre</string>
    <string name="resolution">Resolution</string>
    <string name="codec">Codec</string>
    <string name="video_description">Overview</string>
    <string name="choose_metadata">Choose metadata</string>
    <string name="clear_metadata">Clear metadata</string>
    <string name="credits">Credits</string>
    <string name="format_episodes">%1$s Episodes</string>
    <string name="season">Season</string>
    <string name="seasons">Seasons</string>
    <string name="episodes">Episodes</string>
    <string name="format_episode_name">Episode %1$d\n%2$s</string>
    <string name="video_overview">[Overview]</string>
    <string name="msg_indexing_video_files">Indexing video files&#8230;\nIt may take a few minutes.</string>
    <string name="msg_indexing_music_files">Indexing music files&#8230;</string>
    <string name="error_msg_parser_sub_title">Subtitle parser error\n(Check the subtitle format or internet connection)</string>
    <string name="error_msg_parser_sub_database_title">Subtitle parser error (from database)\n(Check the subtitle format)</string>
    <string name="video_information">Video information</string>
    <string name="trailer">Trailer</string>
    <string name="playback_swipe_forward_backward">Swipe on screen to move forward/backward</string>
    <string name="playback_tap_on_forward_backward">Tap on forward/backward button</string>
    <string name="open_video_information">Open Video Information</string>
    <string name="msg_change_tongue_language_analyze_again_video_information">Please, click "Analyze again" button on Video Information view to see the meaning correctly</string>
    <string name="this_word_is_not_in_the_dictionary">(This word is not in the dictionary. You need to add it to display meaning.)</string>
    <string name="sleep">Sleep</string>
    <string name="cancel_sleep">Cancel sleep</string>
    <string name="change_full_screen_subtitle_view_background_color">Change subtitle background color</string>
    <string name="desc_listen_comprehension_1">It repeats selected count of dialogs then move to the next group. You can choose the oder by the "Playing order in the group" menu</string>
    <string name="desc_listen_comprehension_2">Each dialog is repeating by the selected option. The order is\n"Hide dialog - Show dialog  - Show difficult words only (Repeat)"</string>
    <string name="message_subtitle_font_size">subtitle font size : %1$f\nsubtitle fullscreen font size : %2$f</string>
    <string name="message_change_resize_mode">Screen mode : %1$s</string>
    <string name="resize_mode_fit">fit</string>
    <string name="resize_mode_fixed_width">fixed width</string>
    <string name="resize_mode_fixed_height">fixed height</string>
    <string name="resize_mode_fill">fill</string>
    <string name="resize_mode_zoom">zoom</string>
    <string name="choose_subtitle1_first">Please choose a first subtitle first</string>
    <string name="download_subtitle_file">Download a subtitle file</string>
    <string name="download_subtitle_file_message">Subtitle file type : %1$s\nDon\'t add a file extension in the subtitle file name</string>
    <string name="download_file_started">Downloading is started.</string>
    <string name="nav_video">Videos</string>
    <string name="nav_home_multiplayer_free">Ara Multi Player</string>
    <string name="nav_home_multiplayer">Ara Multi Player</string>
    <string name="local_test" translatable="false">Videos_Test</string>
    <string name="nav_music">Musics</string>
    <string name="nav_network">Network</string>
    <string name="track_selection_title">Select tracks</string>
    <string name="video_folder">Video Folder</string>
    <string name="video_folder_en">English Video Folder</string>
    <string name="video_folder_jp">Japanese Video Folder</string>
    <string name="video_folder_cn">Chinsee Video Folder</string>
    <string name="video_folder_multi_player">MultiPlayer Folder</string>
    <string name="music_folder_en">English Music Folder</string>
    <string name="music_folder_jp">Japanese Music Folder</string>
    <string name="music_folder_cn">Chinsee Music Folder</string>
    <string name="msg_downloaded_file_path">Files are downloaded to this folder\n%1$s</string>
    <string name="msg_video_folder">Show videos only in this folder\n%1$s</string>
    <string name="msg_no_videos_for_random_play" translatable="false">There are no videos available for random play or already loaded.\n\nPlease add files to your playlist or hidden video list.</string>
    <string name="msg_no_videos_for_random_play_in_play_list" translatable="false">There are no files in the playlist. Would you like to retrieve files from the hidden video list?</string>
    <string name="msg_music_folder">Show musics only in this folder\n%1$s</string>
    <string name="refresh_video_list">Refresh video list</string>
    <string name="refresh_music_list">Refresh music list</string>
    <string name="msg_pause_video_first_to_zoom">To Zoom in/out, please pause the video first</string>
    <string name="scrollable_menu_rotate_screen">Rotate Screen</string>
    <string name="scrollable_menu_subtitle_group">Subtitle Group</string>
    <string name="scrollable_menu_left_hand_mode">Left Hand Mode</string>
    <string name="scrollable_menu_shadowing">Shadowing</string>
    <string name="scrollable_menu_delay_subtitle">Delay Subtitle</string>
    <string name="scrollable_menu_sleep">Sleep Timer</string>
    <string name="scrollable_menu_embedded_tracks">Embedded Tracks</string>
    <string name="scrollable_menu_night_mode">Night Mode</string>
    <string name="multi_player_setting_dialog_menu_random_play_mode" translatable="false">Random Play</string>
    <string name="multi_player_setting_dialog_menu_transparency_hidden_buttons_full_screen" translatable="false">transparency of the hidden buttons</string>
    <string name="multi_player_setting_dialog_menu_hide_4_buttons" translatable="false">Hide transparent buttons</string>
    <string name="multi_player_setting_dialog_menu_advanced_mode" translatable="false">Advanced mode</string>
    <string name="multi_player_swap_screen_positions" translatable="false">Swap Screen Positions</string>
    <string name="multi_player_screen_store_layout" translatable="false">Load/Store current videos</string>
    <string name="multi_player_hide_all_videos_ui">Hide all videos UI</string>
    <string name="multi_player_resize_all_videos" translatable="false">Resize all videos</string>
    <string name="multi_player_choose_number_of_screens" translatable="false">Screen count</string>
    <string name="multi_player_select_videos_to_play" translatable="false">Select videos</string>
    <string name="multi_player_play_all_videos_ab_repeat">Play all videos AB Repeat</string>
    <string name="multi_player_play_all_videos_intervals" translatable="false">Play all videos with intervals</string>
    <string name="multi_player_move_all_videos_to_start" translatable="false">Play all videos from the beginning</string>
    <string name="multi_player_mute_all_videos">Mute all videos</string>
    <string name="multi_player_unmute_all_videos">Unmute all videos</string>
    <string name="select_video_folders_for_videos" translatable="false">Videos in the Downloads and Movies folders will appear in the list below. You can change the folders in the settings.</string>
    <string name="video_list_multi_select_menu_hide" translatable="false">Hide</string>
    <string name="video_list_multi_select_menu_play" translatable="false">Play</string>
    <string name="video_list_multi_select_menu_add_item_to_playlist" translatable="false">Playlist</string>
    <string name="video_list_multi_select_menu_more" translatable="false">More</string>
</resources>