<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_video"
        android:icon="@drawable/ic_main_tabbar_video"
        android:title="@string/nav_video"/>

    <item
        android:id="@+id/nav_music"
        android:icon="@drawable/ic_main_tabbar_video"
        android:title="@string/nav_music"/>

    <item
        android:id="@+id/nav_network"
        android:icon="@drawable/ic_main_tabbar_network"
        android:title="@string/nav_network" />

    <item
        android:id="@+id/nav_quiz_list"
        android:icon="@drawable/ic_main_tabbar_quiz"
        android:title="@string/quiz_list" />

<!--    <item-->
<!--        android:id="@+id/nav_download"-->
<!--        android:icon="@drawable/ic_main_tabbar_download"-->
<!--        android:title="@string/download" />-->

</menu>
